Reorganize script data

--- a/web/index.html
+++ b/web/index.html
@@ -2,12 +2,8 @@
   <head>
     <link rel="stylesheet" type="text/css" href="css/styles.css">
     <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
-    <script type="text/javascript">
-      var arches = {arches};
-      var arch_info = {arch_info};
-      var consoles = {consoles};
-      {main}
-    </script>
+    <script type="text/javascript" src="js/data.js"></script>
+    <script type="text/javascript" src="js/main.js"></script>
   </head>
   <body>
     <div id="timeline"></div>
