--- a/web/index.html
+++ b/web/index.html
@@ -1,5 +1,10 @@
+<!DOCTYPE html>
 <html>
   <head>
+    <title>Game Console CPU Timeline</title>
+    <meta charset="UTF-8">
+    <meta name="description" content="A timeline of different CPU architectures used in popular game consoles.">
+    <meta name="author" content="Craig Chasseur">
     <link rel="stylesheet" type="text/css" href="css/styles.css">
     <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
     <script type="text/javascript" src="js/data.js"></script>
