Add legend table

--- a/web/index.html
+++ b/web/index.html
@@ -12,5 +12,13 @@
   </head>
   <body>
     <div id="timeline"></div>
+    <table id="legend">
+      <thead>
+        <tr>
+          <th>CPU Architecture</th>
+        </tr>
+      </thead>
+      <tbody id="legend_body"></tbody>
+    </table>
   </body>
 </html>
