--- a/web/index.html
+++ b/web/index.html
@@ -11,6 +11,7 @@
     <script type="text/javascript" src="js/main.js"></script>
   </head>
   <body>
+    <h1 id="titlebar">Game Console CPU Timeline</h1>
     <div id="timeline"></div>
     <table id="legend">
       <thead>
@@ -20,5 +21,9 @@
       </thead>
       <tbody id="legend_body"></tbody>
     </table>
+    <p id="footer">
+      Made by Craig Chasseur.
+      <a href="https://github.com/craig-chasseur/console-cpu-timeline">Source on github</a>.
+    </p>
   </body>
 </html>
