--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   </head>
   <body>
     <h1 id="titlebar">Game Console CPU Timeline</h1>
+    <p>Hover for details, click to go to Wikipedia.</p> 
     <div id="timeline"></div>
     <table id="legend">
       <thead>
