--- a/index.html
+++ b/index.html
@@ -13,8 +13,10 @@
   </head>
   <body>
     <h1 id="titlebar">Game Console CPU Timeline</h1>
-    <p>Hover for details, click to go to Wikipedia.</p> 
-    <div id="timeline"></div>
+    <p>Hover for details, click to go to Wikipedia.</p>
+    <table><thead><tr id="selector"></tr></thead></table>
+    <div id="console_timeline" class="timeline"></div>
+    <div id="handheld_timeline" class="timeline"></div>
     <table id="legend">
       <thead>
         <tr>
