--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="description" content="A timeline of different CPU architectures used in popular game consoles.">
     <meta name="author" content="Craig Chasseur">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon.png">
+    <link rel="icon" type="image/png" sizes="64x64" href="favicon_64.png">
+    <link rel="icon" type="image/png" sizes="128x128" href="favicon_128.png">
     <link rel="stylesheet" type="text/css" href="css/styles.css">
     <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
     <script type="text/javascript" src="js/data.js"></script>
