Consistent naming for toggle

--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
     <p>Hover for details, click to go to Wikipedia.</p>
     <table>
       <thead><tr id="selector"></tr></thead>
-      <tbody><tr><td id="toggle_extra_cell">
+      <tbody><tr><td id="toggle_rare_cell">
         <form>
-          <label for="toggle_extra">Show rare consoles:</label>
-          <input type="checkbox" id="toggle_extra" name="toggle_extra">
+          <label for="toggle_rare">Show rare consoles:</label>
+          <input type="checkbox" id="toggle_rare" name="toggle_rare">
         </form>
       </td></tr></tbody>
     </table>
